<resources>
    <string name="app_name">Exercise Tracker</string>
    <string name="title_activity_exercise_detail_host">ExerciseDetailHostActivity</string>
    <string name="title_exercise_list">Exercises</string>
    <string name="title_exercise_detail">Details</string>
    <string name="lblExerciseName">Name</string>
    <string name="lblExerciseType">Type</string>
    <string name="lblExerciseDescription">Description</string>
    <string name="btnOk">Create</string>
    <string name="btnCancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="itemCreateExercise">Create</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed: wrong password"</string>
    <string name="reps_done">Reps done:</string>
    <string name="time_done">Time done(seconds):</string>
    <string name="submit">Submit</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="user_id">UserId</string>
    <string name="stay_logged_in_check">StayLoggedIn</string>
    <string name="settings_shared">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="label_off">Off</string>
    <string name="label_on">On</string>
    <string name="title_auto_login">Log in automatically</string>
    <string name="logout">Logout</string>
</resources>